demonstrate use of pipes

--- a/Angular/angular-basics/src/app/app.component.html
+++ b/Angular/angular-basics/src/app/app.component.html
@@ -6,6 +6,7 @@
     <button [routerLink]="['/interpolation']">Interpolation</button>
     <button [routerLink]="['/prop-binding']">Property binding</button>
     <button [routerLink]="['/event-binding']">Event binding</button>
+    <button [routerLink]="['/pipes']">Use of Pipes</button>
   </div>
   <div style="margin-top:20px;">
     <router-outlet></router-outlet>
