--- a/Angular/angular-basics/src/app/app.component.html
+++ b/Angular/angular-basics/src/app/app.component.html
@@ -7,6 +7,7 @@
     <button [routerLink]="['/prop-binding']">Property binding</button>
     <button [routerLink]="['/event-binding']">Event binding</button>
     <button [routerLink]="['/pipes']">Use of Pipes</button>
+    <button [routerLink]="['/component-interaction']">Component Interaction</button>
   </div>
   <div style="margin-top:20px;">
     <router-outlet></router-outlet>
