--- a/Angular/angular-basics/src/app/app.component.html
+++ b/Angular/angular-basics/src/app/app.component.html
@@ -8,6 +8,7 @@
     <button [routerLink]="['/event-binding']">Event binding</button>
     <button [routerLink]="['/pipes']">Use of Pipes</button>
     <button [routerLink]="['/component-interaction']">Component Interaction</button>
+    <button [routerLink]="['/styles']">Style component</button>
   </div>
   <div style="margin-top:20px;">
     <router-outlet></router-outlet>
