add directive example

--- a/Angular/angular-basics/src/app/pipes/pipes.component.html
+++ b/Angular/angular-basics/src/app/pipes/pipes.component.html
@@ -1,3 +1,12 @@
+<!-- Use backgroundColor="yellow" if you want to set the property to a string-->
+
+<!-- Use [backgroundColor]="color" if you want to set the property to property of the component-->
+
+<!-- <p appImportant backgroundColor="yellow">Ironman</p> -->
+<!-- <p appImportant="yellow">Ironman</p> -->
+<p appImportant bgColor="yellow">Ironman</p>
+
+
 <p>
   {{superHero | uppercase}}
 </p>
