--- a/Angular/angular-basics/src/app/app.component.html
+++ b/Angular/angular-basics/src/app/app.component.html
@@ -6,7 +6,7 @@
     <button [routerLink]="['/interpolation']">Interpolation</button>
     <button [routerLink]="['/prop-binding']">Property binding</button>
     <button [routerLink]="['/event-binding']">Event binding</button>
-    <button [routerLink]="['/pipes']">Use of Pipes</button>
+    <button [routerLink]="['/pipes']">Directives and Pipes</button>
     <button [routerLink]="['/component-interaction']">Component Interaction</button>
     <button [routerLink]="['/styles']">Style component</button>
   </div>
