add hero details, route params snapsot example and route params subscripe example

--- a/Angular/angular-basics/src/app/heroes/hero-list.component.html
+++ b/Angular/angular-basics/src/app/heroes/hero-list.component.html
@@ -43,7 +43,7 @@
                                  [style.width.px]='imageWidth' 
                                  [style.margin.px]='imageMargin'>
                         </td>
-                        <td><a [routerLink]="['/heroEdit', hero.id]">
+                        <td><a [routerLink]="['/heroDetails', hero.id]">
                             {{hero.name}}
                             </a>
                         </td>
