--- a/Angular/angular-basics/src/app/app.component.html
+++ b/Angular/angular-basics/src/app/app.component.html
@@ -3,13 +3,13 @@
     <h1>
       Angular Basics
     </h1>
-    <button [routerLink]="['/interpolation']">Interpolation</button>
-    <button [routerLink]="['/prop-binding']">Property binding</button>
-    <button [routerLink]="['/event-binding']">Event binding</button>
-    <button [routerLink]="['/pipes']">Directives and Pipes</button>
-    <button [routerLink]="['/component-interaction']">Component Interaction</button>
-    <button [routerLink]="['/styles']">Style component</button>
-    <button [routerLink]="['/heroes']">HttpClient (Hero list)</button>
+    <button class="btn btn-info" [routerLink]="['/interpolation']">Interpolation</button>
+    <button class="btn btn-info" [routerLink]="['/prop-binding']">Property binding</button>
+    <button class="btn btn-info" [routerLink]="['/event-binding']">Event binding</button>
+    <button class="btn btn-info" [routerLink]="['/pipes']">Directives and Pipes</button>
+    <button class="btn btn-info" [routerLink]="['/component-interaction']">Component Interaction</button>
+    <button class="btn btn-info" [routerLink]="['/styles']">Style component</button>
+    <button class="btn btn-info" [routerLink]="['/heroes']">HttpClient (Hero list)</button>
   </div>
   <div style="margin-top:20px;">
     <router-outlet></router-outlet>
