--- a/Angular/angular-basics/src/app/prop-binding/prop-binding.component.html
+++ b/Angular/angular-basics/src/app/prop-binding/prop-binding.component.html
@@ -1,6 +1,6 @@
 <p [style.background-color]="redColor">
   This is a red paragraph.
 </p>
-<input type="button" [disabled]="needDisable" value="We disable the button using prop binding" />
+<input type="button" class="btn btn-default" [disabled]="needDisable" value="We disable the button using prop binding" />
 <div [class.yellow]="isYellow" style="width:50px;height:50px"></div>
 <div [style.background-color]="isRed ? 'red' : 'blue'" style="width:50px;height:50px"></div>
