add sign up form - form template component

--- a/Angular/angular-basics/src/app/app.component.html
+++ b/Angular/angular-basics/src/app/app.component.html
@@ -10,6 +10,7 @@
     <button class="btn btn-info" [routerLink]="['/component-interaction']">Component Interaction</button>
     <button class="btn btn-info" [routerLink]="['/styles']">Style component</button>
     <button class="btn btn-info" [routerLink]="['/heroes']">HttpClient (Hero list)</button>
+    <button class="btn btn-info" [routerLink]="['/templateForm']">Template Form (Add Hero)</button>
   </div>
   <div style="margin-top:20px;">
     <router-outlet></router-outlet>
