--- a/Angular/angular-basics/src/app/app.component.html
+++ b/Angular/angular-basics/src/app/app.component.html
@@ -9,7 +9,7 @@
     <button class="btn btn-info" [routerLink]="['/pipes']">Directives and Pipes</button>
     <button class="btn btn-info" [routerLink]="['/component-interaction']">Component Interaction</button>
     <button class="btn btn-info" [routerLink]="['/styles']">Style component</button>
-    <button class="btn btn-info" [routerLink]="['/heroes']">HttpClient (Hero list)</button>
+    <button class="btn btn-info" [routerLink]="['/users']">HttpClient (Users list)</button>
     <button class="btn btn-info" [routerLink]="['/templateForm']">Template Form (Sign Up)</button>
     <button class="btn btn-info" [routerLink]="['/reactiveForm']">Reactive Form (Sign Up)</button>
   </div>
