--- a/Angular/angular-basics/src/app/reactive-form/reactive-form.component.html
+++ b/Angular/angular-basics/src/app/reactive-form/reactive-form.component.html
@@ -7,12 +7,12 @@
       <form class="form-horizontal"
             novalidate
             (ngSubmit)="save()"
-            [formGroup]="customerForm">
+            [formGroup]="userForm">
           <fieldset>
               <div class="form-group"
-                  [ngClass]="{'has-error': (customerForm.get('firstName').touched || 
-                                            customerForm.get('firstName').dirty) &&
-                                            !customerForm.get('firstName').valid }">
+                  [ngClass]="{'has-error': (userForm.get('firstName').touched || 
+                                            userForm.get('firstName').dirty) &&
+                                            !userForm.get('firstName').valid }">
                   <label class="col-md-2 control-label" 
                          for="firstNameId">First Name</label>
 
@@ -22,13 +22,13 @@
                              type="text" 
                              placeholder="First Name (required)" 
                              formControlName="firstName" />
-                      <span class="help-block" *ngIf="(customerForm.get('firstName').touched || 
-                                                       customerForm.get('firstName').dirty) && 
-                                                       customerForm.get('firstName').errors">
-                          <span *ngIf="customerForm.get('firstName').errors.required">
+                      <span class="help-block" *ngIf="(userForm.get('firstName').touched || 
+                                                        userForm.get('firstName').dirty) && 
+                                                        userForm.get('firstName').errors">
+                          <span *ngIf="userForm.get('firstName').errors.required">
                               Please enter your first name.
                           </span>
-                          <span *ngIf="customerForm.get('firstName').errors.minlength">
+                          <span *ngIf="userForm.get('firstName').errors.minlength">
                               The first name must be longer than 3 characters.
                           </span>
                       </span>
@@ -36,7 +36,7 @@
               </div>
 
               <div class="form-group"
-                  [ngClass]="{'has-error': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }">
+                  [ngClass]="{'has-error': (userForm.get('lastName').touched || userForm.get('lastName').dirty) && !userForm.get('lastName').valid }">
                   <label class="col-md-2 control-label" 
                       for="lastNameId">Last Name</label>
 
@@ -46,11 +46,11 @@
                              type="text" 
                              placeholder="Last Name (required)" 
                              formControlName="lastName" />
-                      <span class="help-block" *ngIf="(customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && customerForm.get('lastName').errors">
-                          <span *ngIf="customerForm.get('lastName').errors.required">
+                      <span class="help-block" *ngIf="(userForm.get('lastName').touched || userForm.get('lastName').dirty) && userForm.get('lastName').errors">
+                          <span *ngIf="userForm.get('lastName').errors.required">
                               Please enter your last name.
                           </span>
-                           <span *ngIf="customerForm.controls.lastName.errors.maxlength">
+                           <span *ngIf="userForm.controls.lastName.errors.maxlength">
                               The last name must be less than 50 characters.
                           </span>
                      </span>
@@ -58,7 +58,7 @@
               </div>
 
               <div formGroupName="emailGroup"
-                   [ngClass]="{'has-error': customerForm.get('emailGroup').errors }">
+                   [ngClass]="{'has-error': userForm.get('emailGroup').errors }">
                    
                   <div class="form-group"
                        [ngClass]="{'has-error': emailMessage}">
@@ -78,9 +78,9 @@
                   </div>
 
                   <div class="form-group"
-                      [ngClass]="{'has-error': (customerForm.get('emailGroup.confirmEmail').touched || 
-                                                customerForm.get('emailGroup.confirmEmail').dirty) && 
-                                                !customerForm.get('emailGroup.confirmEmail').valid }">
+                      [ngClass]="{'has-error': (userForm.get('emailGroup.confirmEmail').touched || 
+                                                userForm.get('emailGroup.confirmEmail').dirty) && 
+                                                !userForm.get('emailGroup.confirmEmail').valid }">
                       <label class="col-md-2 control-label" 
                           for="confirmEmailId">Confirm Email</label>
 
@@ -90,14 +90,14 @@
                               type="email" 
                               placeholder="Confirm Email (required)" 
                               formControlName = "confirmEmail" />
-                          <span class="help-block" *ngIf="(customerForm.get('emailGroup.confirmEmail').touched || 
-                                                          customerForm.get('emailGroup.confirmEmail').dirty) && 
-                                                          (customerForm.get('emailGroup.confirmEmail').errors ||
-                                                           customerForm.get('emailGroup').errors)">
-                              <span *ngIf="customerForm.get('emailGroup.confirmEmail').errors?.required">
+                          <span class="help-block" *ngIf="(userForm.get('emailGroup.confirmEmail').touched || 
+                                                            userForm.get('emailGroup.confirmEmail').dirty) && 
+                                                          (userForm.get('emailGroup.confirmEmail').errors ||
+                                                          userForm.get('emailGroup').errors)">
+                              <span *ngIf="userForm.get('emailGroup.confirmEmail').errors?.required">
                                   Please confirm your email address.
                               </span>
-                              <span *ngIf="customerForm.get('emailGroup').errors?.match">
+                              <span *ngIf="userForm.get('emailGroup').errors?.match">
                                   The confirmation does not match the email address.
                               </span>                          
                           </span>
@@ -106,7 +106,7 @@
               </div>
 
               <div class="form-group"
-                  [ngClass]="{'has-error': !customerForm.get('phone').valid }">
+                  [ngClass]="{'has-error': !userForm.get('phone').valid }">
                   <label class="col-md-2 control-label" 
                       for="phoneId">Phone</label>
 
@@ -116,8 +116,8 @@
                              type="tel" 
                              placeholder="Phone" 
                              formControlName = "phone" />
-                      <span class="help-block" *ngIf="customerForm.get('phone').errors">
-                          <span *ngIf="customerForm.get('phone').errors.required">
+                      <span class="help-block" *ngIf="userForm.get('phone').errors">
+                          <span *ngIf="userForm.get('phone').errors.required">
                               Please enter your phone number.
                           </span>
                       </span>
@@ -141,9 +141,9 @@
               </div>
 
               <div class="form-group"
-                  [ngClass]="{'has-error': (customerForm.get('rating').touched || 
-                                            customerForm.get('rating').dirty) && 
-                                            !customerForm.get('rating').valid }">
+                  [ngClass]="{'has-error': (userForm.get('rating').touched || 
+                                            userForm.get('rating').dirty) && 
+                                            !userForm.get('rating').valid }">
                   <label class="col-md-2 control-label" 
                       for="ratingId">Rating</label>
 
@@ -152,10 +152,10 @@
                              id="ratingId" 
                              type="number" 
                              formControlName = "rating" />
-                      <span class="help-block" *ngIf="(customerForm.get('rating').touched 
-                                                       || customerForm.get('rating').dirty) && 
-                                                       customerForm.get('rating').errors">
-                           <span *ngIf="customerForm.get('rating').errors.range">
+                      <span class="help-block" *ngIf="(userForm.get('rating').touched 
+                                                       || userForm.get('rating').dirty) && 
+                                                       userForm.get('rating').errors">
+                           <span *ngIf="userForm.get('rating').errors.range">
                               Please rate your experience from 1 to 5.
                           </span>
                      </span>
@@ -173,7 +173,7 @@
                   </div>
               </div>
 
-              <div *ngIf="customerForm.get('sendCatalog').value">
+              <div *ngIf="userForm.get('sendCatalog').value">
                   <div class="form-group">
                       <div class="col-md-4 col-md-offset-2">
                           <span>
@@ -274,7 +274,7 @@
                       <span>
                           <button class="btn btn-primary"
                                   type="submit"
-                                  [disabled]="!customerForm.valid">
+                                  [disabled]="!userForm.valid">
                               Save
                           </button>
                       </span>
@@ -291,8 +291,8 @@
       </form>
   </div>
 </div>
-<br>Dirty: {{ customerForm.dirty }} 
-<br>Touched: {{ customerForm.touched }}
-<br>Valid: {{ customerForm.valid }}
-<br>Value: {{ customerForm.value | json }}
+<br>Dirty: {{ userForm.dirty }} 
+<br>Touched: {{ userForm.touched }}
+<br>Valid: {{ userForm.valid }}
+<br>Value: {{ userForm.value | json }}
 <br>Street: {{ addresses.get('0.street1')?.value }}
