add crud functionality for user

--- a/Angular/angular-basics/src/app/app.component.html
+++ b/Angular/angular-basics/src/app/app.component.html
@@ -10,7 +10,7 @@
     <button class="btn btn-info" [routerLink]="['/component-interaction']">Component Interaction</button>
     <button class="btn btn-info" [routerLink]="['/styles']">Style component</button>
     <button class="btn btn-info" [routerLink]="['/users']">HttpClient (Users list)</button>
-    <button class="btn btn-info" [routerLink]="['/templateForm']">Template Form (Sign Up)</button>
+    <button class="btn btn-info" [routerLink]="['/userDetails/0']">Template Form (Sign Up)</button>
     <button class="btn btn-info" [routerLink]="['/reactiveForm']">Reactive Form (Sign Up)</button>
   </div>
   <div style="margin-top:20px;">
