-initial commit of Angular example

--- a/Angular/angular-basics/src/app/users/user-list.component.html
+++ b/Angular/angular-basics/src/app/users/user-list.component.html
@@ -3,7 +3,7 @@
         {{pageTitle}}
     </div>
 
-    <!-- Filter the Products   -->
+    <!-- Filter the Users   -->
     <div class='panel-body'>
         <div class='row'>
             <div class='col-md-2'>Filter by:</div>
